Font changes and content restructuring

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <style>
-      h2, a {
+      html {
+        font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+      }
+      h2, h3, a {
         color: lightskyblue;
       }
       body {
@@ -23,7 +26,8 @@
         }
       }
       li {
-        padding-bottom: 15px;
+        padding-top: 5px;
+        padding-bottom: 5px;
       }
       header {
         img {
@@ -31,6 +35,9 @@
           float:left;
           margin-right:20px;
           border-radius:9999px;
+        }
+        h3 {
+          color: lightgray;
         }
       }
       */
@@ -83,31 +90,52 @@
         </td>
         <td>
           <ul>
-            <li><a target="_blank" href="https://de.linkedin.com/in/kostastojanovski">LinkedIn</a></li>
-            <li><a target="_blank" href="https://www.xing.com/profile/Kosta_Stojanovski">Xing</a></li>
-            <li><a target="_blank" href="https://medium.com/@kosta.stojanovski">Medium</a></li>
-            <li><a target="_blank" href="https://dzone.com/users/1157757/stojanok.html">DZone</a></li>
-            <li><a target="_blank" href="https://github.com/kstojanovski">GitHub</a></li>
-            <li><a target="_blank" href="https://stackoverflow.com/users/2650023/kosta-stojanovski">stack overflow</a></li>
+            <li>Professional Networking
+              <ul>
+                <li><a target="_blank" href="https://de.linkedin.com/in/kostastojanovski">LinkedIn</a></li>
+                <li><a target="_blank" href="https://www.xing.com/profile/Kosta_Stojanovski">Xing</a></li>
+              </ul>
+            </li>
+            <li>Blogging
+              <ul>
+                <li><a target="_blank" href="https://medium.com/@kosta.stojanovski">Medium</a></li>
+                <li><a target="_blank" href="https://dzone.com/users/1157757/stojanok.html">DZone</a></li>
+              </ul>
+            </li>
+            <li>Coding
+              <ul>
+                <li><a target="_blank" href="https://github.com/kstojanovski">GitHub</a></li>
+                <li><a target="_blank" href="https://stackoverflow.com/users/2650023/kosta-stojanovski">stack overflow</a></li>
+              </ul>
+            </li>
           </ul>
         </td>
         </tr>
       </table>
       <br>
-      <h2>Introduction</h2>
+      <h2>About me</h2>
+      <h3>Introduction</h3>
       <p>
-      I am an agile software developer and like to develop software, primarily in the back end and secondary in the front end. What I like less is working on the DevOps tasks like CI/CD stuff.
-      </p><p>
-      The history of programming
+      I am an agile software developer and like to develop software, primarily in the back end and secondary in the front end. What I like less is working on the DevOps tasks like continues integration and delivery stuff.
+      </p>
+      <h3>University</h3>
+      <p><i>The history of programming</i></p>
+      <p>
       Studying computer science at the university felt like learning the history of programming languages in the timeline from the structural style of programming to the object orientation, from the age when the methods were called type-bonded functions and object destruction was used to the age of the garbage collector.
-      </p><p>
-      Only a few people $MAYBE understand PrimeBase
+      </p>
+      <h3>Blackbit</h3>
+      <p><i>Only a few people $MAYBE understand PrimeBase</i></p>
+      <p>
       My first job as an application developer was based on the not-so-popular tech stack PrimeBase which is not used any more. $MAYBE was the third boolean state which made us very suspicious about the language and worried us, especially when the application server started, and the state $MAYBE in the log output was listed.
-      </p><p>
-      The logic of psychology
+      </p>
+      <h3>Hogrefe</h3>
+      <p title="The actual term was psycho logic"><i>The logic of psychology</i></p>
+      <p>
       As a software developer at "Hogrefe" I needed to implement evaluation rules which were extraordinary and unusual from my point of view as a nondomain specialist. That's how the term "logic of psychology" was born.
-      </p><p>
-      It's full of annotations!
+      </p>
+      <h3>Novatec</h3>
+      <p><i>It's full of annotations!</i></p>
+      <p>
       At "Novatec" I have learned new programming languages, libraries, frameworks, principles, etc., and learning SpringBoot, means learning a myriad of different annotations. A scene from the movie "2001: A Space Odyssey" flashed to my mind, with all the stars - analogy here, the screen with all those annotations.
       </p>
     </main>
