--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             }
           h3 {
             color: #a1a1aa;
-            margin-top: auto;
+            margin-top: 20px;
           }
           a {
             cursor: pointer;
