--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           border-radius: 10px;
           padding: 10px;
           margin-bottom: 10px;
+          height: 320px;
         }
         right-container {
           text-align:right;
@@ -45,6 +46,7 @@
           border-radius: 10px;
           padding: 10px;
           margin-bottom: 10px;
+          height: 320px;
         }
         personal-information {
           h2 {
@@ -80,12 +82,14 @@
         }
         work {
           dd {
-            margin-right: 65px;
+            margin: unset;
+            font-size: 15px;
           }
           dt {
             display: none;
           }
           dl {
+            height: 60px;
             a {
               cursor: pointer;
             }
@@ -111,6 +115,9 @@
         padding: 10px;
         i {
           color: #a1a1aa;
+        }
+        p {
+          font-size: 15px;
         }
       }
       h2, h3, a {
