--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
         background-color: #18181b;
         border: 2px solid #27272c;
         border-radius: 10px;
-        padding: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        overflow: auto;
+        max-height: 400px;
+}
         i {
           color: #a1a1aa;
         }
