--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
         padding-right: 10px;
         overflow: auto;
         max-height: 400px;
-}
+        scrollbar-width: thin;
+        /*scrollbar-color: #18181b #27272c;*/
+        scrollbar-color: grey #18181b;
+      }
         i {
           color: #a1a1aa;
         }
